<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/startQuizButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/quiz_button"/>
    <Button
        android:id="@+id/leaderboardButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startQuizButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/leader_button"/>
    <Button
        android:id="@+id/helpButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leaderboardButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/help_button"/>
    <Button
        android:id="@+id/sButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/helpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/settings_button"/>

</RelativeLayout>