<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <Button
        android:id="@+id/startQuiz"
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/quiz_start"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startQuiz"
        android:layout_centerHorizontal="true"
        android:text="@string/quizwarning"
        android:textColor="#FF0000"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startQuiz"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:text="@string/quizinfo"
        android:textColor="#FFFF"
        android:textSize="20sp" />


</RelativeLayout>
